RESOLVED FIXED219659
REGRESSION(r269647) [Cocoa] Consume GPU sandbox extensions early in Web page creation flow
https://bugs.webkit.org/show_bug.cgi?id=219659
Summary REGRESSION(r269647) [Cocoa] Consume GPU sandbox extensions early in Web page ...
Brent Fulgham
Reported 2020-12-08 15:34:51 PST
We need to consume GPU sandbox extensions earlier in the Web page creation flow so that API calls to thinks like muting video have the relevant mach connections available. This change corrects a regression introduced in Bug 218708 (r269647).
Attachments
Patch (3.34 KB, patch)
2020-12-08 15:38 PST, Brent Fulgham
no flags
Brent Fulgham
Comment 1 2020-12-08 15:35:28 PST
Brent Fulgham
Comment 2 2020-12-08 15:38:29 PST
EWS
Comment 3 2020-12-09 09:35:51 PST
Committed r270584: <https://trac.webkit.org/changeset/270584> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415684 [details].
Note You need to log in before you can comment on or make changes to this bug.