REGRESSION(r269647) [Cocoa] Consume GPU sandbox extensions early in Web page creation flow https://bugs.webkit.org/show_bug.cgi?id=219659 <rdar://problem/72058396>

Reviewed by Jer Noble.

We need to consume GPU sandbox extensions earlier in the Web page creation flow so that API calls to things like
muting video have the relevant mach connections available.

This change corrects a regression introduced in Bug 218708 (r269647).

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::WebPage): Move extension consumption earlier in the constructor.


Canonical link: https://commits.webkit.org/232255@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270584 268f45cc-cd09-0410-ab3c-d52691b4dbfc