Source/WebKit/WebProcess/WebPage/WebPage.cpp
@@ -581,6 +581,19 @@ WebPage::WebPage(PageIdentifier pageID, WebPageCreationParameters&& parameters)
     if (parameters.attachmentElementExtensionHandles)
         SandboxExtension::consumePermanently(*parameters.attachmentElementExtensionHandles);
 #endif
+#if PLATFORM(COCOA)
+    // FIXME(207716): The following should be removed when the GPU process is complete.
+    static bool hasConsumedMediaExtensionHandles = false;
+    if (!hasConsumedMediaExtensionHandles && parameters.mediaExtensionHandles.size()) {
+        SandboxExtension::consumePermanently(parameters.mediaExtensionHandles);
+        hasConsumedMediaExtensionHandles = true;
+    }
+    static bool hasConsumedGPUIOKitExtensionHandles = false;
+    if (!hasConsumedGPUIOKitExtensionHandles && parameters.gpuIOKitExtensionHandles.size()) {
+        SandboxExtension::consumePermanently(parameters.gpuIOKitExtensionHandles);
+        hasConsumedGPUIOKitExtensionHandles = true;
+    }
+#endif
 
     m_page = makeUnique<Page>(WTFMove(pageConfiguration));
 
@@ -741,18 +754,6 @@ WebPage::WebPage(PageIdentifier pageID, WebPageCreationParameters&& parameters)
 #if PLATFORM(COCOA)
     setSmartInsertDeleteEnabled(parameters.smartInsertDeleteEnabled);
     WebCore::setAdditionalSupportedImageTypes(parameters.additionalSupportedImageTypes);
-
-    // FIXME(207716): The following should be removed when the GPU process is complete.
-    static bool hasConsumedMediaExtensionHandles = false;
-    if (!hasConsumedMediaExtensionHandles && parameters.mediaExtensionHandles.size()) {
-        SandboxExtension::consumePermanently(parameters.mediaExtensionHandles);
-        hasConsumedMediaExtensionHandles = true;
-    }
-    static bool hasConsumedGPUIOKitExtensionHandles = false;
-    if (!hasConsumedGPUIOKitExtensionHandles && parameters.gpuIOKitExtensionHandles.size()) {
-        SandboxExtension::consumePermanently(parameters.gpuIOKitExtensionHandles);
-        hasConsumedGPUIOKitExtensionHandles = true;
-    }
 #endif
 
 #if HAVE(APP_ACCENT_COLORS)
